fix layout on smaller screens

--- a/css/style.scss
+++ b/css/style.scss
@@ -136,10 +136,10 @@ body {
   }
 
   form {
-    box-shadow: 0 0 0 1px #555;
+    box-shadow: inset 0 0 0 1px #555;
     width: 400px;
     max-width: 25vw;
-    margin: 1px;
+    // margin: 1px;
     display: grid;
     grid-auto-flow: row;
     gap: 1rem;
